discussion/kv_engine/173324/173324_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Remove DCPBackfill::transitionState calls from sub-classes

Bring all state changes under control of DCPBackfill. Using the return
status of create and scan, DCPBackfill can determine the next state.

Change-Id: I5b613cbde75749a19406c389b3e5c15e2a4070a7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-08 21:12:07.000000000
Message: 
Uploaded patch set 8: Patch Set 7 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-08 21:20:49.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38620/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill.cc:24:20:
error: no member named "makeGuard" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38620/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38620/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17354/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, Vbid &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, char [45], Vbid>::format_arg_store<char const (&)[45], Vbid &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, char const (&)[45], Vbid &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:52:37: note: in instantiation of function template specialization "fmt::v8::format<char const (&)[45], Vbid>" requested here
        throw std::logic_error(fmt::format("{}: {} called in State::Done",
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:24:20: error: no member named "makeGuard" in namespace "folly" [clang-diagnostic-error]
            folly::makeGuard([start = std::chrono::steady_clock::now(), this] {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17354/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17354/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45989/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/dcp/backfill.cc(66): error C3861: "EP_LOG_WARN": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45989/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18303/ : FAILURE

Compile error at [2022-05-08T21:17:37.842Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18303/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6965/ : FAILURE

Compile error at [2022-05-08T21:13:19.965Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6965/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19455/ : FAILURE

Compile error at [2022-05-08T21:16:42.139Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20140/ : FAILURE

Compile error at [2022-05-08T21:16:09.353Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20140/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7057/ : FAILURE

Compile error at [2022-05-08T21:14:58.677Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/dcp/backfill.cc:66:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7057/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19112/ : FAILURE

Compile error at [2022-05-08T21:14:53.076Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9:
error: ?EP_LOG_WARN? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19112/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27512/ : FAILURE

Compile error at [2022-05-08T21:17:54.256Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27512/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16357/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
